@@ -69,7 +69,11 @@ function VarnishQueue(host, port, secret) {
         });
     }
 
-    self.run_cmd = function(cmd) {
+    self.run_cmd = function(cmd, nodup) {
+        if ( nodup && queue.indexOf(cmd) != -1 ) {
+          log("skip duplicated varnish command in queue: " + cmd);
+          return;
+        }
         queue.push(cmd);
         if(queue.length > MAX_QUEUE) {
             console.log("varnish command queue too long, removing commands");
